--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,11 @@
-/* 
+body {
+    background: #424242 url(../img/body_bg.png);
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.container {
+    background: #FFF url(../img/container_bg.png);
+    background-color: rgb(56, 56, 56);
+}
+.dropdown-menu{
+    --bs-dropdown-link-hover-bg: rgb(58, 58, 58);
+}
