--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,9 +2,8 @@ body {
     background: #424242 url(../img/body_bg.png);
 }
 
-.container {
+.contenedor {
     background: #FFF url(../img/container_bg.png);
-    background-color: rgb(56, 56, 56);
 }
 .dropdown-menu{
     --bs-dropdown-link-hover-bg: rgb(58, 58, 58);
